# raytracing-rs

./: .gitignore  Cargo.toml  README.md
src/: hit.rs  lib.rs  light.rs  main.rs  object.rs  ray.rs  raytracer.rs  shader.wgsl  sphere.rs  square.rs  state.rs  texture.rs  triangle.rs  wgpu_texture_util.rs
