[package]
name = "raytracing-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/
[dependencies]
winit = "0.29"
wgpu = "0.19"
cgmath = "0.18"
log = "0.4"
env_logger = "0.11"

# Added support for the web
# https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#added-support-for-the-web
[lib]
crate-type = ["cdylib", "rlib"]
