[package]
name = "raytracing-rs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/
[dependencies]
winit = "0.29"
wgpu = "0.19"
cgmath = "0.18"
log = "0.4"
env_logger = "0.11"
cfg-if = "1"
wasm-bindgen = "0.2.91"
pollster = "0.3.0"

# Added support for the web
# https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#added-support-for-the-web
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
